# eno10

OverEats/: Dockerfile.livetrack  Dockerfile.nginx  Dockerfile.web  cleanup.sh  docker-compose.yml  init.sql  nginx.conf  requirements.txt
SignMeMaybe/: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.cleanup  docker-compose.yml  entrypoint.sh
d3pl0y/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh
d3pl0y/frontend/: pyproject.toml
d3pl0y/frontend/src/d3pl0y_frontend/: api.py  app.py  cleanup.py  config.py  db.py  internal.py  rendering.py  vmcode.py  web.py
d3pl0y/frontend/src/d3pl0y_frontend/static/: app.css  app.js
d3pl0y/frontend/src/d3pl0y_frontend/templates/: _object_row.html  base.html  error.html  execute_result.html  help.html  landing.html  login.html  object_detail.html  objects.html  register.html  registered.html  shared.html
flagdrive/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
flagdrive/backend/: Cargo.toml
flagdrive/backend/migrations/postgres/: 01_flagdrive_schema.sql
flagdrive/backend/src/: auth.rs  cli.rs  crypto.rs  main.rs
flagdrive/backend/src/api_routes/: files.rs  gdpr.rs  login.rs  mod.rs  register.rs  token.rs  user.rs
flagdrive/backend/src/database/: core.rs  files.rs  gdpr.rs  mod.rs  relations.rs  users.rs
flagdrive/frontend/: Cargo.toml  Trunk.toml  index.html
flagdrive/frontend/src/: app.rs  main.rs
flagdrive/frontend/src/components/: auth_form.rs  download_modal.rs  file_card.rs  mod.rs  navbar.rs  profile_card.rs  upload_modal.rs  user_list_item.rs
flagdrive/frontend/src/pages/: dashboard.rs  landing.rs  login.rs  mod.rs  profile.rs  register.rs
flagdrive/frontend/src/styles/: tailwind.css
funsplash/: .dockerignore  .env  .rsyncignore  Dockerfile  cleanup.sh  (+1 more)
(+292 files in other folders)
