[package]
name = "flagdrive-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10.1"
serde_json = "1.0.149"
flagdrive-shared = { version = "0.1.0", path = "../shared" }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.10", features = ["cors", "fs"] }
aes-gcm = "0.10.3"
sha2 = "0.11.0"
subtle = "2.6.1"
