[package]
name = "flagdrive-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
codee = { version = "0.3.5", features = ["json_serde"] }
leptos = { version = "0.8.19", features = ["csr"] }
leptos-use = "0.18.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
flagdrive-shared = { version = "0.1.0", path = "../shared" }
wasm-bindgen = "0.2.121"
wasm-bindgen-futures = "0.4.71"
web-sys = { version = "0.3.98", features = ["FormData", "Request", "RequestInit", "Response", "Window", "HtmlInputElement", "FileList", "File", "Blob", "BlobPropertyBag", "Url", "Document", "HtmlAnchorElement"] }
